--- a/DESS_Kaggle_P100.ipynb
+++ b/DESS_Kaggle_P100.ipynb
@@ -60,19 +60,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install -q numpy==1.24.3\n",
-    "!pip install -q transformers==4.28.1\n",
-    "!pip install -q torch==2.4.0\n",
+    "# Install compatible versions\n",
+    "!pip install -q numpy==1.26.4\n",
+    "!pip install -q transformers==4.36.0\n",
+    "!pip install -q torch==2.1.0\n",
     "!pip install -q Jinja2==3.1.2\n",
     "!pip install -q tensorboardX==2.6\n",
     "!pip install -q tqdm==4.65.0\n",
-    "!pip install -q scikit-learn==1.2.2\n",
+    "!pip install -q scikit-learn==1.3.2\n",
     "!pip install -q 'spacy>=3.7.2,<3.8.0'\n",
-    "!pip install -q matplotlib==3.7.1\n",
-    "!pip install -q torch_geometric==2.3.1\n",
+    "!pip install -q matplotlib==3.8.0\n",
+    "!pip install -q torch_geometric==2.4.0\n",
     "!pip install -q 'pydantic>=2.7.0'\n",
     "\n",
-    "# Restart kernel to apply numpy downgrade\n",
+    "# Restart kernel to apply changes\n",
     "import os\n",
     "os.kill(os.getpid(), 9)"
    ]
