feat: Update Cell 4 to show all package versions
- Add numpy version check
- Add transformers version check
- Add numpy.dtypes verification
- Better formatted output with sections

--- a/DESS_Kaggle_P100.ipynb
+++ b/DESS_Kaggle_P100.ipynb
@@ -92,14 +92,22 @@
    "outputs": [],
    "source": [
     "import torch\n",
+    "import numpy as np\n",
+    "import transformers\n",
     "import os\n",
     "\n",
-    "print(f\"PyTorch Version: {torch.__version__}\")\n",
+    "print(\"=== Package Versions ===\")\n",
+    "print(f\"NumPy version: {np.__version__}\")\n",
+    "print(f\"Transformers version: {transformers.__version__}\")\n",
+    "print(f\"PyTorch version: {torch.__version__}\")\n",
+    "print(f\"\\n=== GPU Information ===\")\n",
     "print(f\"CUDA Available: {torch.cuda.is_available()}\")\n",
     "if torch.cuda.is_available():\n",
     "    print(f\"CUDA Version: {torch.version.cuda}\")\n",
     "    print(f\"GPU Device: {torch.cuda.get_device_name(0)}\")\n",
-    "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.2f} GB\")"
+    "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.2f} GB\")\n",
+    "print(f\"\\n=== Verification ===\")\n",
+    "print(f\"NumPy has dtypes: {hasattr(np, 'dtypes')} ✓\")"
    ]
   },
   {
