--- a/DESS_Kaggle_P100.ipynb
+++ b/DESS_Kaggle_P100.ipynb
@@ -5,11 +5,13 @@
    "metadata": {},
    "source": [
     "# DESS Model - Kaggle P100 GPU Setup\n",
-    "## Aspect Sentiment Triplet Extraction with Contrastive Learning\n",
+    "## Aspect Sentiment Triplet Extraction with Enhanced Semantic GCN\n",
     "\n",
-    "This notebook runs the DESS (D2E2S) model with **Contrastive Learning** for improved entity-opinion pairing.\n",
+    "This notebook runs the DESS (D2E2S) model with **Enhanced Semantic GCN** for improved performance.\n",
     "\n",
-    "**Latest Update**: Added contrastive learning module for +0.5-0.8% Triplet F1 improvement"
+    "**Best Configuration**: Enhanced Semantic GCN only (77.14% Triplet F1)\n",
+    "\n",
+    "**Note**: Contrastive learning was tested but decreased performance (-1.04%), so we use Enhanced SemGCN only."
    ]
   },
   {
@@ -107,7 +109,7 @@
     "    print(f\"GPU Device: {torch.cuda.get_device_name(0)}\")\n",
     "    print(f\"GPU Memory: {torch.cuda.get_device_properties(0).total_memory / 1e9:.2f} GB\")\n",
     "print(f\"\\n=== Verification ===\")\n",
-    "print(f\"NumPy has dtypes: {hasattr(np, 'dtypes')} ✓\")"
+    "print(f\"NumPy has dtypes: {hasattr(np, 'dtypes')} \u2713\")"
    ]
   },
   {
@@ -133,8 +135,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Quick Test - Contrastive Learning (1 epoch)\n",
-    "### Test new contrastive learning module with Enhanced Semantic GCN"
+    "## 6. Train Model - Enhanced SemGCN (Recommended)\n",
+    "### Best configuration: 77.14% Triplet F1, 88.68% Entity F1"
    ]
   },
   {
@@ -153,17 +155,15 @@
     "    --deberta_feature_dim 768 \\\n",
     "    --hidden_dim 384 \\\n",
     "    --emb_dim 768 \\\n",
-    "    --use_enhanced_semgcn \\\n",
-    "    --use_contrastive \\\n",
-    "    --contrastive_weight 0.1"
+    "    --use_enhanced_semgcn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Full Training - Enhanced SemGCN + Contrastive Learning (120 epochs)\n",
-    "### Expected: Triplet F1 77.6-78.0% (+0.5-0.8% improvement)"
+    "## 7. Full Training - Enhanced SemGCN (120 epochs)\n",
+    "### Expected: Triplet F1 77.14%, Entity F1 88.68%"
    ]
   },
   {
@@ -182,17 +182,15 @@
     "    --deberta_feature_dim 768 \\\n",
     "    --hidden_dim 384 \\\n",
     "    --emb_dim 768 \\\n",
-    "    --use_enhanced_semgcn \\\n",
-    "    --use_contrastive \\\n",
-    "    --contrastive_weight 0.1"
+    "    --use_enhanced_semgcn"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Baseline Comparison - Enhanced SemGCN Only (No Contrastive)\n",
-    "### For comparison: Expected Triplet F1 77.14%"
+    "## 8. Baseline Comparison (Original Model)\n",
+    "### For comparison: Expected Triplet F1 75.75%"
    ]
   },
   {
@@ -201,7 +199,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment to run baseline for comparison\n",
+    "# Uncomment to run baseline (original model without enhancements)\n",
     "# !python train.py \\\n",
     "#     --seed 42 \\\n",
     "#     --max_span_size 8 \\\n",
@@ -211,73 +209,14 @@
     "#     --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
     "#     --deberta_feature_dim 768 \\\n",
     "#     --hidden_dim 384 \\\n",
-    "#     --emb_dim 768 \\\n",
-    "#     --use_enhanced_semgcn"
+    "#     --emb_dim 768"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 9. Hyperparameter Tuning - Different Contrastive Weights"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 9a. Lower Weight (0.05) - Less Influence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment to try lower contrastive weight\n",
-    "# !python train.py \\\n",
-    "#     --seed 42 \\\n",
-    "#     --max_span_size 8 \\\n",
-    "#     --batch_size 16 \\\n",
-    "#     --epochs 120 \\\n",
-    "#     --dataset 14res \\\n",
-    "#     --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
-    "#     --deberta_feature_dim 768 \\\n",
-    "#     --hidden_dim 384 \\\n",
-    "#     --emb_dim 768 \\\n",
-    "#     --use_enhanced_semgcn \\\n",
-    "#     --use_contrastive \\\n",
-    "#     --contrastive_weight 0.05"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 9b. Higher Weight (0.2) - More Influence"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Uncomment to try higher contrastive weight\n",
-    "# !python train.py \\\n",
-    "#     --seed 42 \\\n",
-    "#     --max_span_size 8 \\\n",
-    "#     --batch_size 16 \\\n",
-    "#     --epochs 120 \\\n",
-    "#     --dataset 14res \\\n",
-    "#     --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
-    "#     --deberta_feature_dim 768 \\\n",
-    "#     --hidden_dim 384 \\\n",
-    "#     --emb_dim 768 \\\n",
-    "#     --use_enhanced_semgcn \\\n",
-    "#     --use_contrastive \\\n",
-    "#     --contrastive_weight 0.2"
+    "## 9. Test on Other Datasets"
    ]
   },
   {
@@ -407,25 +346,34 @@
     "| Configuration | Entity F1 | Triplet F1 | Improvement |\n",
     "|--------------|-----------|------------|-------------|\n",
     "| Baseline (Original) | 87.65% | 75.75% | --- |\n",
-    "| + Enhanced SemGCN | 88.68% | 77.14% | +1.39% |\n",
-    "| + SemGCN + Contrastive | **88.5-89.0%** | **77.6-78.0%** | **+1.85-2.25%** |\n",
+    "| **+ Enhanced SemGCN** | **88.68%** | **77.14%** | **+1.39%** \u2705 |\n",
     "\n",
     "### Key Features:\n",
-    "- ✅ Enhanced Semantic GCN with relative position encoding\n",
-    "- ✅ Contrastive learning for entity-opinion pairing\n",
-    "- ✅ InfoNCE loss for better representation learning\n",
-    "- ✅ Configurable contrastive weight (default: 0.1)\n",
+    "- \u2705 Enhanced Semantic GCN with relative position encoding\n",
+    "- \u2705 Global context aggregation\n",
+    "- \u2705 Multi-scale feature extraction\n",
+    "- \u2705 Proven best configuration (77.14% Triplet F1)\n",
     "\n",
-    "### Hyperparameters:\n",
-    "- `--use_contrastive`: Enable contrastive learning\n",
-    "- `--contrastive_weight`: Weight for contrastive loss (0.05-0.2)\n",
-    "- Temperature: 0.07 (hardcoded in SimplifiedContrastiveLoss)\n",
+    "### Note on Contrastive Learning:\n",
+    "- \u274c Contrastive learning was tested but **decreased performance** (-1.04%)\n",
+    "- \u274c Result: 76.10% Triplet F1 (worse than 77.14%)\n",
+    "- \u2705 **Recommendation**: Use Enhanced SemGCN only\n",
     "\n",
-    "### Next Steps:\n",
-    "1. Run full training with contrastive learning\n",
-    "2. Compare with baseline results\n",
-    "3. Tune hyperparameters if needed\n",
-    "4. Test on other datasets (14lap, 15res, 16res)"
+    "### Training Configuration:\n",
+    "```bash\n",
+    "python train.py --dataset 14res --epochs 120 \\\n",
+    "    --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
+    "    --deberta_feature_dim 768 --hidden_dim 384 --emb_dim 768 \\\n",
+    "    --use_enhanced_semgcn\n",
+    "```\n",
+    "\n",
+    "### Next Steps to Reach 80% F1:\n",
+    "1. Span Boundary Refinement (+0.4-0.6%)\n",
+    "2. Cross-Attention Fusion (+0.5-0.7%)\n",
+    "3. Data Augmentation (+0.3-0.5%)\n",
+    "4. Ensemble Methods (+0.3-0.5%)\n",
+    "\n",
+    "**Combined Expected**: 77.14% + 1.5-2.3% = **78.6-79.4%** (approaching 80%)"
    ]
   }
  ],
