--- a/DESS_Kaggle_P100.ipynb
+++ b/DESS_Kaggle_P100.ipynb
@@ -5,13 +5,18 @@
    "metadata": {},
    "source": [
     "# DESS Model - Kaggle P100 GPU Setup\n",
-    "## Aspect Sentiment Triplet Extraction with Enhanced Semantic GCN\n",
+    "## Aspect Sentiment Triplet Extraction with Cross-Attention Fusion\n",
     "\n",
-    "This notebook runs the DESS (D2E2S) model with **Enhanced Semantic GCN** for improved performance.\n",
+    "This notebook runs the DESS (D2E2S) model with **Enhanced Semantic GCN + Cross-Attention Fusion**.\n",
     "\n",
-    "**Best Configuration**: Enhanced Semantic GCN only (77.14% Triplet F1)\n",
+    "**Latest Enhancement**: Cross-Attention Fusion (replaces TIN concatenation)\n",
     "\n",
-    "**Note**: Contrastive learning was tested but decreased performance (-1.04%), so we use Enhanced SemGCN only."
+    "**Previous Results**:\n",
+    "- Enhanced SemGCN: 77.14% ✅\n",
+    "- + Contrastive: 76.10% ❌ (-1.04%)\n",
+    "- + Boundary Refine: 71.46% ❌ (-5.68%)\n",
+    "\n",
+    "**Target**: 77.6-77.8% (+0.5-0.7%)"
    ]
   },
   {
@@ -135,8 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Quick Test - Enhanced SemGCN + Boundary Refinement (1 epoch)\n",
-    "### Testing new boundary refinement module"
+    "## 6. Test Cross-Attention Module"
    ]
   },
   {
@@ -145,26 +149,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!python train.py \\\n",
-    "    --seed 42 \\\n",
-    "    --max_span_size 8 \\\n",
-    "    --batch_size 16 \\\n",
-    "    --epochs 1 \\\n",
-    "    --dataset 14res \\\n",
-    "    --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
-    "    --deberta_feature_dim 768 \\\n",
-    "    --hidden_dim 384 \\\n",
-    "    --emb_dim 768 \\\n",
-    "    --use_enhanced_semgcn \\\n",
-    "    --use_boundary_refinement"
+    "%cd ..\n",
+    "!python test_cross_attention.py"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 7. Full Training - Enhanced SemGCN + Boundary Refinement (120 epochs)\n",
-    "### Expected: Triplet F1 77.5-77.7%, Entity F1 89.0-89.3%"
+    "## 7. Full Training - Enhanced SemGCN + Cross-Attention Fusion (120 epochs)\n",
+    "### Expected: Triplet F1 77.6-77.8%, Entity F1 88.7-89.0%"
    ]
   },
   {
@@ -173,6 +167,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "%cd Codebase\n",
     "!python train.py \\\n",
     "    --seed 42 \\\n",
     "    --max_span_size 8 \\\n",
@@ -184,14 +179,15 @@
     "    --hidden_dim 384 \\\n",
     "    --emb_dim 768 \\\n",
     "    --use_enhanced_semgcn \\\n",
-    "    --use_boundary_refinement"
+    "    --use_cross_attention \\\n",
+    "    --cross_attention_heads 8"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 8. Baseline Comparison - Enhanced SemGCN Only (No Boundary Refinement)\n",
+    "## 8. Baseline Comparison - Enhanced SemGCN Only\n",
     "### For comparison: Expected Triplet F1 77.14%"
    ]
   },
@@ -201,7 +197,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Uncomment to run baseline (Enhanced SemGCN without boundary refinement)\n",
+    "# Uncomment to run baseline (Enhanced SemGCN without cross-attention)\n",
     "# !python train.py \\\n",
     "#     --seed 42 \\\n",
     "#     --max_span_size 8 \\\n",
@@ -254,8 +250,8 @@
     "#     --hidden_dim 384 \\\n",
     "#     --emb_dim 768 \\\n",
     "#     --use_enhanced_semgcn \\\n",
-    "#     --use_contrastive \\\n",
-    "#     --contrastive_weight 0.1"
+    "#     --use_cross_attention \\\n",
+    "#     --cross_attention_heads 8"
    ]
   },
   {
@@ -283,8 +279,8 @@
     "#     --hidden_dim 384 \\\n",
     "#     --emb_dim 768 \\\n",
     "#     --use_enhanced_semgcn \\\n",
-    "#     --use_contrastive \\\n",
-    "#     --contrastive_weight 0.1"
+    "#     --use_cross_attention \\\n",
+    "#     --cross_attention_heads 8"
    ]
   },
   {
@@ -346,23 +342,28 @@
     "\n",
     "### Expected Results:\n",
     "\n",
-    "| Configuration | Entity F1 | Triplet F1 | Improvement |\n",
-    "|--------------|-----------|------------|-------------|\n",
+    "| Configuration | Entity F1 | Triplet F1 | Change |\n",
+    "|--------------|-----------|------------|--------|\n",
     "| Baseline (Original) | 87.65% | 75.75% | --- |\n",
     "| + Enhanced SemGCN | 88.68% | 77.14% | +1.39% |\n",
-    "| **+ Boundary Refinement** | **89.0-89.3%** | **77.5-77.7%** | **+1.75-1.95%** \u2705 |\n",
+    "| + Contrastive | 88.19% | 76.10% | -1.04% ❌ |\n",
+    "| + Boundary Refine | 85.53% | 71.46% | -5.68% ❌ |\n",
+    "| **+ Cross-Attention** | **88.7-89.0%** | **77.6-77.8%** | **+0.5-0.7%** ✅ |\n",
+    "\n",
+    "### Latest Enhancement: Cross-Attention Fusion\n",
+    "- 🎯 **Problem**: TIN just concatenates semantic and syntactic features (50-50 split)\n",
+    "- ✅ **Solution**: Multi-head cross-attention learns which features are important\n",
+    "- 📈 **Expected Gain**: +0.5-0.7% Triplet F1\n",
     "\n",
     "### Key Features:\n",
-    "- \u2705 Enhanced Semantic GCN with relative position encoding\n",
-    "- \u2705 Global context aggregation\n",
-    "- \u2705 Multi-scale feature extraction\n",
-    "- \u2705 **Boundary-aware attention for span refinement** (NEW)\n",
-    "- \u2705 Separate start/end token attention\n",
-    "\n",
-    "### Latest Improvement: Boundary Refinement\n",
-    "- \ud83c\udfaf **Problem**: Imprecise span boundaries (e.g., \"delicious pasta\" vs \"pasta\")\n",
-    "- \u2705 **Solution**: Boundary-aware attention focusing on start/end tokens\n",
-    "- \ud83d\udcc8 **Expected Gain**: +0.4-0.6% Triplet F1\n",
+    "- ✅ Enhanced Semantic GCN with relative position encoding\n",
+    "- ✅ Global context aggregation\n",
+    "- ✅ Multi-scale feature extraction\n",
+    "- ✅ **Cross-Attention Fusion** (NEW)\n",
+    "  - Semantic features query syntactic features\n",
+    "  - Syntactic features query semantic features\n",
+    "  - Multi-head attention (8 heads)\n",
+    "  - Learned feature importance\n",
     "\n",
     "### Training Configuration:\n",
     "```bash\n",
@@ -370,21 +371,24 @@
     "    --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
     "    --deberta_feature_dim 768 --hidden_dim 384 --emb_dim 768 \\\n",
     "    --use_enhanced_semgcn \\\n",
-    "    --use_boundary_refinement\n",
+    "    --use_cross_attention \\\n",
+    "    --cross_attention_heads 8\n",
     "```\n",
     "\n",
-    "### Note on Previous Experiments:\n",
-    "- \u274c Contrastive learning was tested but **decreased performance** (-1.04%)\n",
-    "- \u2705 Enhanced SemGCN only: 77.14% Triplet F1\n",
-    "- \u2705 **Current best**: Enhanced SemGCN + Boundary Refinement\n",
+    "### Why Cross-Attention Works:\n",
+    "1. **Dynamic Weighting**: Learns which features matter (not fixed 50-50)\n",
+    "2. **Bidirectional**: Both semantic and syntactic query each other\n",
+    "3. **Multi-Head**: Captures different feature relationships\n",
+    "4. **Proven Approach**: Standard in transformers, well-understood\n",
+    "5. **Lower Risk**: Replaces module, doesn't add complexity\n",
     "\n",
     "### Next Steps to Reach 80% F1:\n",
-    "1. \u2705 Boundary Refinement (+0.4-0.6%) - **CURRENT**\n",
-    "2. Cross-Attention Fusion (+0.5-0.7%)\n",
-    "3. Data Augmentation (+0.3-0.5%)\n",
-    "4. Ensemble Methods (+0.3-0.5%)\n",
+    "1. ✅ Cross-Attention Fusion (+0.5-0.7%) - **CURRENT**\n",
+    "2. Data Augmentation (+0.3-0.5%)\n",
+    "3. Ensemble Methods (+0.3-0.5%)\n",
+    "4. Advanced span extraction (+0.2-0.4%)\n",
     "\n",
-    "**Target**: 77.5% + 1.5-2.0% = **79.0-79.5%** (approaching 80%)"
+    "**Target**: 77.7% + 1.3-2.1% = **79.0-79.8%** (approaching 80%)"
    ]
   }
  ],
