--- a/DESS_Kaggle_P100.ipynb
+++ b/DESS_Kaggle_P100.ipynb
@@ -157,6 +157,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## 6a. Test Triplet Extraction (Optional)\n",
+    "### See how model extracts triplets in JSON format"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Uncomment to see triplet extraction in JSON format (1 epoch only)\n",
+    "# %cd Codebase\n",
+    "# !python train.py \\\n",
+    "#     --seed 42 \\\n",
+    "#     --max_span_size 8 \\\n",
+    "#     --batch_size 16 \\\n",
+    "#     --epochs 1 \\\n",
+    "#     --dataset 14res \\\n",
+    "#     --pretrained_deberta_name microsoft/deberta-v3-base \\\n",
+    "#     --deberta_feature_dim 768 \\\n",
+    "#     --hidden_dim 384 \\\n",
+    "#     --emb_dim 768 \\\n",
+    "#     --use_enhanced_semgcn \\\n",
+    "#     --print_triplets"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 7. Full Training - Enhanced SemGCN + Cross-Attention Fusion (120 epochs)\n",
     "### Expected: Triplet F1 77.6-77.8%, Entity F1 88.7-89.0%"
    ]
@@ -381,6 +411,26 @@
     "3. **Multi-Head**: Captures different feature relationships\n",
     "4. **Proven Approach**: Standard in transformers, well-understood\n",
     "5. **Lower Risk**: Replaces module, doesn't add complexity\n",
+    "\n",
+    "### Triplet Extraction Visualization:\n",
+    "\n",
+    "Use `--print_triplets` flag to see how sentences are classified:\n",
+    "\n",
+    "```bash\n",
+    "python train.py --dataset 14res --epochs 1 \\\n",
+    "    --use_enhanced_semgcn --print_triplets\n",
+    "```\n",
+    "\n",
+    "**Output Format (JSON)**:\n",
+    "```json\n",
+    "{\"ID\": \"sentence_1_0\", \"Text\": \"the food was delicious\", \"Quadruplet\": [{\"Aspect\": \"food\", \"Opinion\": \"delicious\", \"Sentiment\": \"POS\"}]}\n",
+    "```\n",
+    "\n",
+    "**Save to file**:\n",
+    "```bash\n",
+    "python train.py --print_triplets ... > output.txt 2>&1\n",
+    "grep '^{' output.txt > triplets.jsonl\n",
+    "```\n",
     "\n",
     "### Next Steps to Reach 80% F1:\n",
     "1. ✅ Cross-Attention Fusion (+0.5-0.7%) - **CURRENT**\n",
